# KinectCam

./: .gitignore  CMakeLists.txt  Dll.cpp  KinectInfraredCam.cpp  KinectInfraredCam.def  KinectInfraredCam.h  KinectRGBCam.cpp  KinectRGBCam.h  KinectVirtualCamera.cpp  KinectVirtualCamera.h  README.md  util.h
cmake/: FindDirectShow.cmake  FindDirectX.cmake  FindKinect.cmake  FindWindowsSDK.cmake
